--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle":
-      ["error",{"allow":["_id"]}],
-    "linebreak-style": 0,
-    "no-console": 0,
+    "no-underscore-dangle": ["error", { "allow": ["_id", "_doc"]}],
     "object-shorthand": "off"
   }
 }
